frontend: Fix shifted user invite copy icon
This issue adds the appropriate padding to the
copy_generate_invite_link class. This fixes the copy link icon which
seemed to be shifted when clicked.

Fixes #16868

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -460,6 +460,7 @@ li,
     position: relative;
     margin-right: -32px;
     margin-top: -1px;
+    padding: 8px 3px 0 13px;
 }
 
 #clipboard_image {
